Fixed Product alignment

--- a/client/src/styles/admin.css
+++ b/client/src/styles/admin.css
@@ -27,8 +27,7 @@ input.admin{
 .checkBox {
     padding-top: 20px;
     text-align: left;
-    font-size: 12px;
-    margin-right: 25px;
+    font-size: 11px;
     padding-inline-start: 4px;
 }
 
